--- a/MyBot/MyBot.vcxproj
+++ b/MyBot/MyBot.vcxproj
@@ -171,15 +171,15 @@
       <LanguageStandard>stdcpp20</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <AdditionalOptions>/wd4251 /utf-8 %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalIncludeDirectories>C:\Users\rrbai\Documents\Code Projects\C++ Discord Bot\MyBot\Commands;C:\Users\rrbai\Documents\Code Projects\C++ Discord Bot\MyBot\Headers;C:\Users\rrbai\Documents\Code Projects\C++ Discord Bot\MyBot\external_libraries;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\rrbai\Documents\Code Projects\C++ Discord Bot\MyBot\Commands;C:\Users\rrbai\Documents\Code Projects\C++ Discord Bot\MyBot\Headers;C:\Users\rrbai\Documents\Code Projects\C++ Discord Bot\MyBot\external_libraries;C:\Users\rrbai\Downloads\mysql-connector-c++-8.3.0-winx64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>ws2_32.lib;dpp.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;mysqlclient.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\rrbai\Documents\Code Projects\C++ Discord Bot\MyBot\external_libraries\add_libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>ws2_32.lib;dpp.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;mysqlcppconn8.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\rrbai\Downloads\mysql-connector-c++-8.3.0-winx64\lib64\vs14;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>copy /y "$(ProjectDir)dependencies\64\release\bin\*.dll" "$(OutDir)"</Command>
@@ -189,13 +189,14 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Commands\AskCommand.cpp" />
     <ClCompile Include="Commands\BlameSerena.cpp" />
     <ClCompile Include="Commands\BrosnanStatus.cpp" />
     <ClCompile Include="Commands\button_click_handler.cpp" />
     <ClCompile Include="Commands\CleanCommand.cpp" />
     <ClCompile Include="Commands\command_refresh.cpp" />
     <ClCompile Include="Commands\CreateRolesButton.cpp" />
-    <ClCompile Include="Commands\db_access.cpp" />
+    <ClCompile Include="Commands\DatabaseManager.cpp" />
     <ClCompile Include="Commands\FactsCommand.cpp" />
     <ClCompile Include="Commands\FFLogsToXIVAnalysis.cpp" />
     <ClCompile Include="Commands\FunCommand.cpp" />
@@ -203,7 +204,6 @@
     <ClCompile Include="Commands\MemberJoinHandler.cpp" />
     <ClCompile Include="Commands\message_listener.cpp" />
     <ClCompile Include="Commands\ModCommand.cpp" />
-    <ClCompile Include="Commands\PollCommand.cpp" />
     <ClCompile Include="Commands\ReactionLogger.cpp" />
     <ClCompile Include="Commands\ReminderCommand.cpp" />
     <ClCompile Include="Commands\rules_command.cpp" />
@@ -302,13 +302,14 @@
     <ClInclude Include="dependencies\include\dpp-10.0\dpp\webhook.h" />
     <ClInclude Include="dependencies\include\dpp-10.0\dpp\win32_safe_warnings.h" />
     <ClInclude Include="dependencies\include\dpp-10.0\dpp\wsclient.h" />
+    <ClInclude Include="Headers\AskCommand.h" />
     <ClInclude Include="Headers\BlameSerena.h" />
     <ClInclude Include="Headers\BrosnanStatus.h" />
     <ClInclude Include="Headers\button_click_handler.h" />
     <ClInclude Include="Headers\CleanCommand.h" />
     <ClInclude Include="Headers\command_refresh.h" />
     <ClInclude Include="Headers\CreateRolesButton.h" />
-    <ClInclude Include="Headers\db_access.h" />
+    <ClInclude Include="Headers\DatabaseManager.h" />
     <ClInclude Include="Headers\FactsCommand.h" />
     <ClInclude Include="Headers\FFLogsToXIVAnalysis.h" />
     <ClInclude Include="Headers\FunCommand.h" />
@@ -318,7 +319,6 @@
     <ClInclude Include="Headers\message_listener.h" />
     <ClInclude Include="Headers\ModCommand.h" />
     <ClInclude Include="Headers\pierce_brosnan_facts.h" />
-    <ClInclude Include="Headers\PollCommand.h" />
     <ClInclude Include="Headers\ReactionLogger.h" />
     <ClInclude Include="Headers\ReminderCommand.h" />
     <ClInclude Include="Headers\rules_command.h" />
